Increased z-index of sending card to fix various problems. Added modals for sending, accepting, and rejecting emails. Created a different layout for overview section. Added new images. Added An intro at top of the page

--- a/src/styles/AfterSchool.css
+++ b/src/styles/AfterSchool.css
@@ -17,8 +17,8 @@
     padding-bottom: 2rem;
 } */
 .overview{
-    width: 60%;
-    margin-left: 20%;
+    width: 55%;
+    margin-left: 22.5%;
     background-color: var(--nta-green);
     border-radius: 20px;
     padding: 1rem;
@@ -46,6 +46,7 @@
 .afterschool-content > h2{
     padding-left: 2rem;
     padding-top: 2rem;
+    font-size: 2.5rem;
 }
 .image-segment{
     display: flex;
@@ -85,4 +86,37 @@
     .afterschool-content > h2{
         font-size: 6rem;
     }
+}
+
+
+/* Second Afterschool go */
+.after-school-card{
+    width: 60%;
+    margin-left: 20%;
+    height: 30vh;
+    background-color: var(--nta-green);
+    border-radius: 20px;
+    color: white;
+    position: relative;
+    padding: 3rem;
+    padding-right: 0;
+    padding-bottom: 0;
+    display: flex;
+    margin-top: 3%;
+}
+.left-card{
+    padding-bottom: 1rem;
+    padding-right: 4rem;
+}
+.temp-right-image{
+    border-radius: 20px;
+    max-width: 35%;
+}
+
+.after-school-card:nth-child(odd){
+    /* text-align: end; */
+    padding-left: 0;
+}
+.after-school-card:nth-child(odd) .left-card{
+    padding-left: 4rem;
 }
